# pystylometry

./: .gitignore  DEPENDENCIES.md  Makefile  README.md  pyproject.toml
.claude/: settings.local.json
.claude/commands/: git.md
.claude/context/: pystylometry-plan.md  stylometry-metrics.md
.github/: ISSUE_68.md  ISSUE_69.md
docs/: coleman_liau.md  index.md  metrics-showcase-hound-of-baskervilles.md
docs/algorithms/: README.md  additional-authorship.md  cohesion-coherence.md  genre-register.md  kilgarriff.md  stylistic-markers.md
docs/authorship/: burrows_delta.md  compression.md  zeta.md
docs/character/: character_metrics.md
docs/consistency/: drift.md
docs/dialect/: detector.md
docs/lexical/: advanced_diversity.md  function_words.md  hapax.md  mtld.md  repetition.md  ttr.md  word_class.md  word_frequency_sophistication.md  yule.md
docs/ngrams/: entropy.md  extended_ngrams.md
docs/prosody/: rhythm_prosody.md
docs/readability/: additional_formulas.md  ari.md  coleman_liau.md  complex_words.md  flesch.md  gunning_fog.md  smog.md  syllables.md
docs/stylistic/: vocabulary_overlap.md
docs/syntactic/: advanced_syntactic.md  pos_ratios.md  sentence_stats.md  sentence_types.md
docs/viz/: drift.md
pystylometry/: __init__.py  _normalize.py  _types.py  _utils.py  cli.py  mega.py
pystylometry/authorship/: __init__.py  additional_methods.py  burrows_delta.py  kilgarriff.py  zeta.py
pystylometry/character/: character_metrics.py
pystylometry/consistency/: _thresholds.py  drift.py
pystylometry/dialect/: __init__.py  detector.py
pystylometry/expression/: __init__.py  abbreviations.py  emoticons.py
pystylometry/lexical/: __init__.py  advanced_diversity.py  bnc_frequency.py  bnc_meta.py  function_words.py  hapax.py  mega_meta.py  mtld.py  repetition.py  ttr.py  word_class.py  word_class_distribution.py  word_frequency_sophistication.py  yule.py
pystylometry/ngrams/: __init__.py  entropy.py  extended_ngrams.py
pystylometry/prosody/: README.md  __init__.py  pronouncing.py  rhythm_prosody.py  sentence_syllable_patterns.py  suffix_cascade.py  syllable_pattern_repetition.py
pystylometry/readability/: __init__.py  additional_formulas.py  ari.py  coleman_liau.py  complex_words.py  flesch.py  gunning_fog.py  smog.py  syllables.py
pystylometry/stylistic/: __init__.py  cohesion_coherence.py  flourishes.py  genre_register.py  markers.py  vocabulary_overlap.py
pystylometry/syntactic/: __init__.py  advanced_syntactic.py  pos_ratios.py  sentence_stats.py  sentence_types.py
pystylometry/viz/: __init__.py  drift.py
pystylometry/vocabulary/: __init__.py  synonym_diversity.py
tests/: README.md  _split_tests.py  conftest.py  test_additional_readability.py  test_adv_syntactic_comparative_analysis.py  test_advanced_diversity.py  test_advanced_diversity_comparisons.py  test_advanced_diversity_edge_cases.py  test_advanced_syntactic.py  test_api.py  test_ari.py  test_ari_age_ranges.py  test_ari_formula.py  test_ari_gutenberg_texts.py  test_ari_metadata.py  test_ari_special_cases.py  test_character.py  test_character_metrics_basic.py  test_character_metrics_constraints.py  test_character_metrics_real_world.py  test_clausal_density.py  test_clause_counting.py  test_coleman_liau.py  test_coleman_liau_basic.py  test_coleman_liau_complexity_levels.py  test_coleman_liau_formula.py  test_coleman_liau_gutenberg_texts.py  test_coleman_liau_metadata.py  test_coleman_liau_reliability.py  test_coleman_liau_rounding.py  test_coleman_liau_unicode.py  test_compute_compression_distance.py  test_compute_extended_ngrams.py  test_compute_extended_ngrams_with_pos.py  test_compute_johns_delta.py  test_compute_minmax.py  test_contraction_detection.py  test_dale_chall_basic.py  test_dale_chall_edge_cases.py  test_dialect.py  (+92 more)
tests/authorship/: test_compute_compression_distance.py  test_compute_johns_delta.py  test_compute_minmax.py  test_integration.py
tests/character/: test_character_metrics_edge_cases.py  test_character_metrics_integration.py  test_character_metrics_special_characters.py  test_character_metrics_specific_features.py  test_special_characters.py
tests/common/: test_cmu_syllable_zero.py  test_constraints.py  test_normalize_for_readability.py  test_paragraph_stats.py  test_ratio_validation.py  test_rhythm_prosody.py  test_spacy_integration.py  test_tokenizer.py  test_utils.py
tests/consistency/: test_drift.py  test_thresholds.py
tests/dialect/: test_dialect_edge_cases.py  test_dialect_grammar_patterns.py  test_dialect_markers_by_level.py  test_dialect_markers_loader.py
tests/expression/: test_abbreviations.py  test_emoticons.py
tests/fixtures/: doyle-the-sign-of-the-four.txt  doyle-the-valley-of-fear.txt  encabulator.txt  seuss-pastiche.txt
tests/lexical/: test_academic_word_list.py  test_advanced_diversity_real_world.py  test_advanced_diversity_tokenization.py  test_bnc_apostrophe_normalization.py  test_bnc_classification_column.py  test_bnc_meta.py  test_dash_normalization.py  test_function_words_authorship.py  test_function_words_basic.py  test_function_words_case_insensitive.py  test_function_words_distribution.py  test_hapax_basic_functionality.py  test_hapax_edge_cases.py  test_hapax_lexicon_analysis.py  test_hdd.py  test_honore_r.py  test_mattr.py  test_mega_meta.py  test_mtld_edge_cases.py  test_mtld_forward_backward.py  test_mtld_metadata.py  test_repetition.py  test_ttr.py  test_vocabulary_statistics.py  test_word_class.py  test_word_class_distribution.py  test_word_frequency_tokenization.py  test_yule_edge_cases.py  test_yule_i_formula.py  test_yule_k_formula.py  test_yule_with_real_text.py
tests/ngrams/: test_entropy.py  test_generate_skipgrams.py  test_shannon_entropy.py
tests/prosody/: test_beat_detection.py  test_beat_detection_concrete.py  test_beat_detection_isocolon.py  test_pronouncing.py  test_pronouncing_stress.py  test_sentence_syllable_patterns.py  test_suffix_cascade.py  test_syllable_distribution.py  test_syllable_pattern_repetition.py
tests/readability/: test_ari_basic.py  test_ari_complexity_levels.py  test_ari_edge_cases.py  (+27 more)
(+39 files in other folders)
