[tool.poetry]
name = "pystylometry"
version = "0.1.0"
description = "Comprehensive Python package for stylometric analysis"
authors = ["Craig Trim <craigtrim@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [{ include = "pystylometry" }]
keywords = [
    "stylometry",
    "nlp",
    "text-analysis",
    "authorship",
    "readability",
    "lexical-diversity",
    "readability-metrics",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Typing :: Typed",
]

[tool.poetry.urls]
Homepage = "https://github.com/craigtrim/pystylometry"
Repository = "https://github.com/craigtrim/pystylometry"
Issues = "https://github.com/craigtrim/pystylometry/issues"

[tool.poetry.dependencies]
python = "^3.11"
stylometry-ttr = "^1.0.3"

[tool.poetry.group.readability.dependencies]
pronouncing = "^0.2.0"
# spaCy added for NLP-enhanced Gunning Fog Index (PR #4)
# Enables accurate proper noun detection (POS tagging) and inflection handling (lemmatization)
# See: https://github.com/craigtrim/pystylometry/pull/4
spacy = "^3.8.0"

[tool.poetry.group.syntactic.dependencies]
spacy = "^3.8.0"

[tool.poetry.group.lexical.dependencies]
# Lexical lookup tools for rare word and neologism detection
# Used in hapax legomena analysis to distinguish:
# - True neologisms (not in WordNet, not in BNC)
# - Rare words (in BNC but not WordNet, or vice versa)
# - Common words (in both lexicons)
bnc-lookup = "*"
wordnet-lookup = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^4.0"
ruff = "^0.1"
mypy = "^1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=pystylometry --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
