[tool.poetry]
name = "pystylometry"
version = "1.4.3"
description = "Comprehensive Python package for stylometric analysis"
authors = ["Craig Trim <craigtrim@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [{ include = "pystylometry" }]
keywords = [
    "stylometry",
    "nlp",
    "text-analysis",
    "authorship",
    "readability",
    "lexical-diversity",
    "readability-metrics",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Typing :: Typed",
]

[tool.poetry.scripts]
# pystylometry-drift manuscript.txt --window-size=500 --stride=250
pystylometry-drift = "pystylometry.cli:drift_cli"
# pystylometry-viewer drift_analyzer.html
pystylometry-viewer = "pystylometry.cli:viewer_cli"
# pystylometry-tokenize manuscript.txt --json --metadata
pystylometry-tokenize = "pystylometry.cli:tokenize_cli"
# bnc manuscript.txt -o report.html
bnc = "pystylometry.cli:bnc_frequency_cli"
# mega --input-dir ~/ebooks/Author --output-file /tmp/author.xlsx
mega = "pystylometry.cli:mega_cli"
# word-class --input-file manuscript.txt -o report.tsv
word-class = "pystylometry.cli:classify_cli"
# bnc-meta --input-dir /tmp --output-file /tmp/bnc-comparison.xlsx
bnc-meta = "pystylometry.cli:bnc_meta_cli"

[tool.poetry.urls]
Homepage = "https://github.com/craigtrim/pystylometry"
Repository = "https://github.com/craigtrim/pystylometry"
Issues = "https://github.com/craigtrim/pystylometry/issues"

[tool.poetry.dependencies]
python = "^3.9"
rich = "^13.0"
# Optional dependencies for extras
# Issue #60: replaced dead ``pronouncing`` package with direct ``cmudict`` access
cmudict = { version = "^1.0.0", optional = true }
spacy = { version = "^3.8.0", optional = true }
bnc-lookup = { version = ">=1.4.3", optional = true }
wordnet-lookup = { version = ">=1.2.4", optional = true }
gngram-lookup = { version = ">=0.2.5", optional = true }
openpyxl = { version = "^3.1.0", optional = true }
matplotlib = { version = "^3.8.0", optional = true }
seaborn = { version = "^0.13.0", optional = true }

[tool.poetry.extras]
# pip install pystylometry[readability]
readability = ["cmudict", "spacy"]
# pip install pystylometry[syntactic]
syntactic = ["spacy"]
# pip install pystylometry[lexical]
lexical = ["bnc-lookup", "wordnet-lookup", "gngram-lookup", "openpyxl"]
# pip install pystylometry[excel]
excel = ["openpyxl"]
# pip install pystylometry[viz]
viz = ["matplotlib", "seaborn"]
# pip install pystylometry[all]
all = ["cmudict", "spacy", "bnc-lookup", "wordnet-lookup", "gngram-lookup", "openpyxl", "matplotlib", "seaborn"]

[tool.poetry.group.readability.dependencies]
# Issue #60: replaced dead ``pronouncing`` package with direct ``cmudict`` access
cmudict = "^1.0.0"
# spaCy added for NLP-enhanced Gunning Fog Index (PR #4)
# Enables accurate proper noun detection (POS tagging) and inflection handling (lemmatization)
# See: https://github.com/craigtrim/pystylometry/pull/4
spacy = "^3.8.0"

[tool.poetry.group.syntactic.dependencies]
spacy = "^3.8.0"

[tool.poetry.group.lexical.dependencies]
# Lexical lookup tools for rare word and neologism detection
# Used in hapax legomena analysis to distinguish:
# - True neologisms (not in WordNet, not in BNC)
# - Rare words (in BNC but not WordNet, or vice versa)
# - Common words (in both lexicons)
bnc-lookup = ">=1.4.0"
wordnet-lookup = "*"
# Google Books Ngram corpus lookup (5M words, O(1) hash-based)
# Used in BNC frequency analysis to cross-reference word existence
# See: https://github.com/craigtrim/pystylometry/issues/47
gngram-lookup = ">=0.2.3"
# Excel export for BNC frequency CLI
openpyxl = "^3.1.0"

[tool.poetry.group.viz.dependencies]
# Visualization support for drift detection and stylometric analysis
# Install with: pip install pystylometry[viz] or poetry install --with viz
matplotlib = "^3.8.0"
seaborn = "^0.13.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^4.0"
ruff = "^0.1"
mypy = "^1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=pystylometry --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.ruff.lint.per-file-ignores]
# JSX template files contain embedded JavaScript that can't be easily line-wrapped
"pystylometry/viz/jsx/*.py" = ["E501"]
# Test files may have long assertions and test data
"tests/*.py" = ["E501"]
"tests/**/*.py" = ["E501", "E402"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "seaborn",
    "seaborn.*",
    "bnc_lookup",
    "wordnet_lookup",
    "gngram_counter",
    "gngram_counter.*",
    "matplotlib.*",
]
ignore_missing_imports = true
